Fix: Hide overflow in root

--- a/src/Pages/ChatbotPage/ChatbotPage.module.css
+++ b/src/Pages/ChatbotPage/ChatbotPage.module.css
@@ -63,7 +63,7 @@
 }
 
 .chatContainerCentered {
-  margin-top: 15%;
+  margin-top: 10%;
 }
 
 .messagesContainer {
@@ -101,7 +101,7 @@
   border-radius: 20px;
   padding: 20px;
   padding-right: 3.5rem;
-  width: 100;
+  width: 100%;
   height: 100%;
   border: none;
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1);
